--- a/BSP_EDT/src/InformationRegisters/Спец_РегистрОшибок/Forms/ФормаСписка/Form.form
+++ b/BSP_EDT/src/InformationRegisters/Спец_РегистрОшибок/Forms/ФормаСписка/Form.form
@@ -492,6 +492,10 @@
           </localValue>
         </title>
       </fields>
+      <fields xsi:type="schema:DataCompositionSchemaDataSetField">
+        <dataPath>Скриншот</dataPath>
+        <field>Скриншот</field>
+      </fields>
     </extInfo>
   </attributes>
   <commandInterface>
