--- a/src/Catalogs/ПодключаемоеОборудование/Forms/ФормаСписка/Form.form
+++ b/src/Catalogs/ПодключаемоеОборудование/Forms/ФормаСписка/Form.form
@@ -776,7 +776,7 @@
             <horizontalAlign>Left</horizontalAlign>
           </extInfo>
         </extendedTooltip>
-        <commandName>CommonCommand.СообщениеВТехническуюПоддержку</commandName>
+        <commandName>0</commandName>
         <representation>Auto</representation>
         <autoMaxWidth>true</autoMaxWidth>
         <autoMaxHeight>true</autoMaxHeight>
