--- a/src/Catalogs/ПодключаемоеОборудование/Forms/ФормаЭлемента/Form.form
+++ b/src/Catalogs/ПодключаемоеОборудование/Forms/ФормаЭлемента/Form.form
@@ -1741,7 +1741,7 @@
           <horizontalAlign>Left</horizontalAlign>
         </extInfo>
       </extendedTooltip>
-      <commandName>CommonCommand.СообщениеВТехническуюПоддержку</commandName>
+      <commandName>0</commandName>
       <representation>Auto</representation>
       <autoMaxWidth>true</autoMaxWidth>
       <autoMaxHeight>true</autoMaxHeight>
@@ -2058,7 +2058,7 @@
   <commandInterface>
     <navigationPanel>
       <cmiFragmentRecord>
-        <command>CommonCommand.СообщениеВТехническуюПоддержку</command>
+        <command>0</command>
         <userVisible/>
       </cmiFragmentRecord>
     </navigationPanel>
