--- a/src/InformationRegisters/Спец_ЗарегистрированныеОбъектыДляОбмена_Регистры/Forms/ФормаСписка/Form.form
+++ b/src/InformationRegisters/Спец_ЗарегистрированныеОбъектыДляОбмена_Регистры/Forms/ФормаСписка/Form.form
@@ -525,10 +525,10 @@
       <common>true</common>
     </edit>
     <notDefaultUseAlwaysAttributes xsi:type="form:DataPath">
-      <segments>Список.ДатаРегистрации</segments>
+      <segments>Список.UnixTimestamp</segments>
     </notDefaultUseAlwaysAttributes>
     <notDefaultUseAlwaysAttributes xsi:type="form:DataPath">
-      <segments>Список.UnixTimestamp</segments>
+      <segments>Список.ДатаРегистрации</segments>
     </notDefaultUseAlwaysAttributes>
     <main>true</main>
     <extInfo xsi:type="form:DynamicListExtInfo">
@@ -615,6 +615,7 @@
           <types>Number</types>
           <numberQualifiers/>
         </valueType>
+        <values xsi:type="core:UndefinedValue"/>
         <useRestriction>true</useRestriction>
         <expression>СмещениеСтандартногоВремени()</expression>
       </parameters>
