--- a/src/InformationRegisters/Спец_ЗарегистрированныеОбъектыДляОбмена_Ссылки/Forms/ФормаСписка/Form.form
+++ b/src/InformationRegisters/Спец_ЗарегистрированныеОбъектыДляОбмена_Ссылки/Forms/ФормаСписка/Form.form
@@ -635,6 +635,7 @@
           <types>Number</types>
           <numberQualifiers/>
         </valueType>
+        <values xsi:type="core:UndefinedValue"/>
         <useRestriction>true</useRestriction>
         <expression>СмещениеСтандартногоВремени()</expression>
       </parameters>
