--- a/src/Catalogs/Спец_Базы/Forms/ФормаСписка/Form.form
+++ b/src/Catalogs/Спец_Базы/Forms/ФормаСписка/Form.form
@@ -664,8 +664,8 @@
 			ИЛИ СправочникБазы.ВключитьОбмен
 				И (НЕ СправочникГруппыБазДляОбщихОбменов.Ссылка ЕСТЬ NULL
 					ИЛИ ГруппыБазДляОбщихОбменовОбщиеБазы.Ссылка ЕСТЬ NULL)) КАК ЭтоКлючеваяБаза
-	// -- Спец_БСП.ОбменСДругимиБазами_НеЕстьМодульОтправителя
-	// ++ Спец_БСП.ОбменСДругимиБазами_БезМодуляОтправителя
+	// -- Спец_БСП.ОбменСДругимиБазами_БезМодуляОтправителя
+	// ++ Спец_БСП.ОбменСДругимиБазами_НеЕстьМодульОтправителя
 	////,МАКСИМУМ(СправочникБазы.ИмяПредопределенныхДанных &lt;> &quot;&quot;
 	////		ИЛИ СправочникБазы.Ссылка = &amp;ТекущаяБаза
 	////		ИЛИ СправочникБазы.ВключитьОбмен) КАК ЭтоКлючеваяБаза
