Ну, промазал немножко

--- a/src/Catalogs/Спец_Базы/Forms/ФормаСписка/Form.form
+++ b/src/Catalogs/Спец_Базы/Forms/ФормаСписка/Form.form
@@ -664,7 +664,7 @@
 			ИЛИ СправочникБазы.ВключитьОбмен
 				И (НЕ СправочникГруппыБазДляОбщихОбменов.Ссылка ЕСТЬ NULL
 					ИЛИ ГруппыБазДляОбщихОбменовОбщиеБазы.Ссылка ЕСТЬ NULL)) КАК ЭтоКлючеваяБаза
-	// -- Спец_БСП.ОбменСДругимиБазами_БезМодуляОтправителя
+	// -- Спец_БСП.ОбменСДругимиБазами_ЕстьМодульОтправителя
 	// ++ Спец_БСП.ОбменСДругимиБазами_НеЕстьМодульОтправителя
 	////,МАКСИМУМ(СправочникБазы.ИмяПредопределенныхДанных &lt;> &quot;&quot;
 	////		ИЛИ СправочникБазы.Ссылка = &amp;ТекущаяБаза
