--- a/src/Catalogs/Спец_СтруктураТаблицБазыДанных/Forms/ФормаВыбора/Form.form
+++ b/src/Catalogs/Спец_СтруктураТаблицБазыДанных/Forms/ФормаВыбора/Form.form
@@ -409,52 +409,6 @@
         <autoMaxHeight>true</autoMaxHeight>
       </extInfo>
     </items>
-    <items xsi:type="form:FormField">
-      <name>ДатаПоследнейОчистки</name>
-      <id>25</id>
-      <visible>true</visible>
-      <enabled>true</enabled>
-      <userVisible>
-        <common>true</common>
-      </userVisible>
-      <dataPath xsi:type="form:DataPath">
-        <segments>Список.ДатаПоследнейОчистки</segments>
-      </dataPath>
-      <extendedTooltip>
-        <name>ДатаПоследнейОчисткиРасширеннаяПодсказка</name>
-        <id>27</id>
-        <visible>true</visible>
-        <enabled>true</enabled>
-        <userVisible>
-          <common>true</common>
-        </userVisible>
-        <type>Label</type>
-        <autoMaxWidth>true</autoMaxWidth>
-        <autoMaxHeight>true</autoMaxHeight>
-        <extInfo xsi:type="form:LabelDecorationExtInfo">
-          <horizontalAlign>Left</horizontalAlign>
-        </extInfo>
-      </extendedTooltip>
-      <contextMenu>
-        <name>ДатаПоследнейОчисткиКонтекстноеМеню</name>
-        <id>26</id>
-        <visible>true</visible>
-        <enabled>true</enabled>
-        <userVisible>
-          <common>true</common>
-        </userVisible>
-        <autoFill>true</autoFill>
-      </contextMenu>
-      <type>LabelField</type>
-      <editMode>Enter</editMode>
-      <showInHeader>true</showInHeader>
-      <headerHorizontalAlign>Left</headerHorizontalAlign>
-      <showInFooter>true</showInFooter>
-      <extInfo xsi:type="form:LabelFieldExtInfo">
-        <autoMaxWidth>true</autoMaxWidth>
-        <autoMaxHeight>true</autoMaxHeight>
-      </extInfo>
-    </items>
     <commandBarLocation>None</commandBarLocation>
     <autoCommandBar>
       <name>СписокКоманднаяПанель</name>
@@ -712,7 +666,7 @@
           <condition>true</condition>
           <group>true</group>
         </useRestriction>
-        <presentationExpression>Спец_ОбщегоНазначенияКлиентСервер.ПеревестиРазмерИзБайтовВЧитемыйВид(ОбщийРазмерТаблицы)</presentationExpression>
+        <presentationExpression>Спец_СтроковыеФункцииКлиентСервер.ПеревестиРазмерИзБайтовВЧитемыйВид(ОбщийРазмерТаблицы)</presentationExpression>
         <valueType>
           <types>Number</types>
           <numberQualifiers>
