--- a/src/Catalogs/Спец_СтруктураТаблицБазыДанных/Forms/ФормаСписка/Form.form
+++ b/src/Catalogs/Спец_СтруктураТаблицБазыДанных/Forms/ФормаСписка/Form.form
@@ -1064,7 +1064,11 @@
         </useRestriction>
         <presentationExpression>Спец_СтроковыеФункцииКлиентСервер.ПеревестиСекундыВЧитемыйВид(ВремяПоследнейОчистки)</presentationExpression>
         <valueType>
-          <types>DefinedType.Спец_UnixTimestamp</types>
+          <types>Number</types>
+          <numberQualifiers>
+            <precision>21</precision>
+            <scale>9</scale>
+          </numberQualifiers>
         </valueType>
       </calculatedFields>
     </extInfo>
