--- a/src/Catalogs/Спец_Базы/Forms/ФормаЭлемента/Form.form
+++ b/src/Catalogs/Спец_Базы/Forms/ФормаЭлемента/Form.form
@@ -531,6 +531,55 @@
     </extInfo>
   </items>
   <items xsi:type="form:FormField">
+    <name>СтрокаПодключенияКБазеДанныхНаСервере</name>
+    <id>204</id>
+    <visible>true</visible>
+    <enabled>true</enabled>
+    <userVisible>
+      <common>true</common>
+    </userVisible>
+    <dataPath xsi:type="form:DataPath">
+      <segments>Объект.СтрокаПодключенияКБазеДанныхНаСервере</segments>
+    </dataPath>
+    <extendedTooltip>
+      <name>СтрокаПодключенияКБазеДанныхНаСервереРасширеннаяПодсказка</name>
+      <id>206</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <type>Label</type>
+      <autoMaxWidth>true</autoMaxWidth>
+      <autoMaxHeight>true</autoMaxHeight>
+      <extInfo xsi:type="form:LabelDecorationExtInfo">
+        <horizontalAlign>Left</horizontalAlign>
+      </extInfo>
+    </extendedTooltip>
+    <contextMenu>
+      <name>СтрокаПодключенияКБазеДанныхНаСервереКонтекстноеМеню</name>
+      <id>205</id>
+      <visible>true</visible>
+      <enabled>true</enabled>
+      <userVisible>
+        <common>true</common>
+      </userVisible>
+      <autoFill>true</autoFill>
+    </contextMenu>
+    <type>InputField</type>
+    <editMode>Enter</editMode>
+    <showInHeader>true</showInHeader>
+    <headerHorizontalAlign>Left</headerHorizontalAlign>
+    <showInFooter>true</showInFooter>
+    <extInfo xsi:type="form:InputFieldExtInfo">
+      <autoMaxHeight>true</autoMaxHeight>
+      <wrap>true</wrap>
+      <chooseType>true</chooseType>
+      <typeDomainEnabled>true</typeDomainEnabled>
+      <textEdit>true</textEdit>
+    </extInfo>
+  </items>
+  <items xsi:type="form:FormField">
     <name>Магазин</name>
     <id>201</id>
     <visible>true</visible>
