Вернул парочку "Динамическое чтение данных" для списков

--- a/src/InformationRegisters/Спец_ЛогиПоОбъектам/Forms/ФормаСписка/Form.form
+++ b/src/InformationRegisters/Спец_ЛогиПоОбъектам/Forms/ФормаСписка/Form.form
@@ -694,6 +694,7 @@
 ИЗ
 	РегистрСведений.Спец_ЛогиПоОбъектам КАК Спец_ЛогиПоОбъектам</queryText>
       <mainTable>InformationRegister.Спец_ЛогиПоОбъектам</mainTable>
+      <dynamicDataRead>true</dynamicDataRead>
       <autoFillAvailableFields>true</autoFillAvailableFields>
       <customQuery>true</customQuery>
       <autoSaveUserSettings>true</autoSaveUserSettings>
