--- a/src/InformationRegisters/Спец_РегистрОшибок/Forms/ФормаСписка/Form.form
+++ b/src/InformationRegisters/Спец_РегистрОшибок/Forms/ФормаСписка/Form.form
@@ -503,6 +503,7 @@
 ИЗ
 	РегистрСведений.Спец_РегистрОшибок КАК РегистрСведенийСпец_РегистрОшибок</queryText>
       <mainTable>InformationRegister.Спец_РегистрОшибок</mainTable>
+      <dynamicDataRead>true</dynamicDataRead>
       <autoFillAvailableFields>true</autoFillAvailableFields>
       <customQuery>true</customQuery>
       <autoSaveUserSettings>true</autoSaveUserSettings>
